# FastApi

./: Dockerfile  README.md  alembic.ini  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/terraform/: terraform.yml
alembic/: env.py
alembic/versions/: 239f534d1bde_yooo.py  3fc7a5284014_changes_to_tables.py  924605fb4b8c_.py  a5e26f48d6d0_add_tracker.py  ba60de17e175_changes_in_foods_table.py  d1abdc4f3b3c_changes_to_tracker.py  df8820553b25_add_fitness_goal.py  e84a4fcd9432_initial_users_table_with_fitness_goal.py
backend/src/: __init__.py  main.py
backend/src/core/: __init__.py  config.py  security.py
backend/src/db/: __init__.py  database.py  dependencies.py  foods.py  mongo.py  tracker.py
backend/src/models/: tables.py  user.py
backend/src/schemas/: pydantic_models.py  token.py
backend/src/services/: auth.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  Dashboard.css  Dashboard.jsx  ErrorBoundary.jsx  index.css  main.jsx
infrastructure/: infra_main.tf
src/: __init__.py  config.py  main.py  pydantic_models.py  pyproject.toml
src/api/: __init__.py  dependencies.py
src/core/: __init__.py  security.py
src/db/: database.py  dependencies.py
src/models/: __init__.py  database.py  model.py  user.py
src/schemas/: __init__.py  pydantic_models.py  users.py
src/services/: auth.py
static/: index.html  script.js  styles.css  swagger-custom.js
tests/: conftest.py  test_authentication.py  test_clients.py  test_food.py  test_foods.py
(+28 files in other folders)
